<resources>
    <string name="app_name">luckyzyx</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="button" translatable="false">Toast</string>
    <string name="button2" translatable="false">对话框</string>
    <string name="textview" translatable="false">文本框</string>
    <string name="checkbox" translatable="false">复选框</string>
    <string name="name">NameNameNameNameNameNameNameNameName</string>
</resources>